<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/questionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_textview"
        android:padding="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/question"
        android:lines="4"
        android:gravity="top"
        android:textColor="@color/black"
        android:layout_marginHorizontal="30dp"
        android:textSize="18sp"
        android:paddingVertical="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionNumberTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option1Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/option_1"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option2Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/option_2"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAllCaps="false" android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1Button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option3Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/option_3"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAllCaps="false" android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option2Button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="10dp"
        android:text="@string/_20"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/totalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/total_score_0"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:text="@string/question_number_placeholder"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/timerTextView"
        app:layout_constraintStart_toEndOf="@id/totalScoreTextView"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
       android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

